<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4"
    tools:context=".detalleLibroFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20sp"
        android:orientation="vertical"
        android:padding="20sp">

        <TextView
            android:id="@+id/lblPortada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="Detalle del Usuario"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblNombre"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/lblNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDireccion"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/lblDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCorreo"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/lblCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txtTipoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTipoUsuario"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spinnerTipoUsuario"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_marginTop="30sp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:backgroundTint="#0088ff"
                android:text="Editar"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088ff"
                android:text="Eliminar"
                android:textColor="#FFFFFF" />
        </LinearLayout>


    </LinearLayout>
</FrameLayout>